--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "/src/server.js",
- "scripts": {
+  "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js"
   },
@@ -18,7 +18,8 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "mongodb": "^7.0.0",
-    "mongoose": "^9.1.4"
+    "mongoose": "^9.1.4",
+    "nodemailer": "^8.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
